--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "strict": true,
     "moduleResolution": "node",
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
