--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "css-loader": "^6.7.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
